Added game and music page, added links in the nav

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">BP</a>
+        <a class="navbar-brand" href="./LandingPage.html">BP</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -23,27 +23,27 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="./LandingPage.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Gaming and Music</a>
+              <a class="nav-link" href="./GamesMusic.html">Gaming and Music</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Social Media
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="https://www.facebook.com/lilneo777/">Facebook</a>
+                <a class="dropdown-item" href="https://www.instagram.com/brennanproffitt/?hl=en">Instagram</a>
+                <a class="dropdown-item" href="https://twitter.com/B_M_Proff">Twitter</a>
               </div>
             </li>
           </ul>
         </div>
       </nav>
+      
     <div class="container">
-        <h2 class="d-flex justify-content-center">Welcome to my web page!</h2>
+        <h2 class="d-flex justify-content-center">Welcome!</h2>
 
         <div class="row">
             <div class="col-sm-3">
